--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-{% block title %}Add Post{% endblock %}
+{% block title %}Edit Post{% endblock %}
 
 {% block content %}
 <style>
-    #add-post-form {
+    #edit-post-form {
         text-align: center;
         margin: 0 auto;
         max-width: 600px;
@@ -12,6 +12,7 @@
         box-shadow: 0 0 10px rgba(0,0,0,0.1);
         padding: 20px;
     }
+
     input[type="text"], textarea {
         width: 100%;
         padding: 10px;
@@ -20,6 +21,7 @@
         border-radius: 5px;
         margin-bottom: 10px;
     }
+
     input[type="submit"] {
         padding: 10px 20px;
         font-size: 16px;
@@ -30,10 +32,11 @@
         cursor: pointer;
     }
 </style>
-<form action="#" method="post" id="add-post-form" onsubmit="return validateForm()">
-    <p><input type="text" name="header" id="header" placeholder="Post title" /></p>
-    <p><textarea name="content" id="content" placeholder="What's on your mind today?" rows="4"></textarea></p>
-    <p><input type="submit" value="Post!" /></p>
+
+<form action="#" method="post" id="edit-post-form" onsubmit="return validateForm()">
+    <p><input type="text" name="header" id="header" placeholder="Post title" value="{{ post.content }}" /></p>
+    <p><textarea name="content" id="content" placeholder="What's on your mind today?" rows="4">{{ post.post_content }}</textarea></p>
+    <p><input type="submit" value="Update Post" /></p>
 </form>
 
 <script>
