--- a/templates/post.html
+++ b/templates/post.html
@@ -48,6 +48,10 @@
         font-size: 0.8em;
         color: #7f8c8d;
     }
+    .edited-at {
+        font-size: 0.8em;
+        color: #7f8c8d;
+    }
     .comment-form textarea {
         width: 100%;
         padding: 10px;
@@ -83,6 +87,9 @@
 <div class="article-container">
     <h1 class="article-title">{{ post.content }}</h1>
     <p class="article-meta">Posted by @{{ post.user_name }} on {{ post.created_at.strftime('%Y-%m-%d') }}</p>
+    {% if post.edited_at != None %}
+    <p class="edited-at">Last edited at {{ post.edited_at.strftime('%Y-%m-%d-%h') }}</p>
+    {% endif %}
     <a class=edit-btn href="{{ url_for('edit_post', post_id=post.id) }}">Edit</a>
 
     <div class="article-content preserve-whitespace">
